<resources>
    <string name="app_name">SudoKey</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>

    <string name="Validate">Validate</string>
    <string name="Reset">Clear</string>
    <string name="Image">Image</string>
    <string name="Back">Back</string>
    <string name="Tip">Show Tip</string>
    <string name="Solution">Solution</string>
    <string name="LastSolution">Last Sol.</string>
    <string name="Forward">Fwd</string>
    <string name="EditCandidates">Edit Cand.</string>
    <string name="ShowAllCandidates">Easy Mode</string>
</resources>