<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolverActivity">

    <com.example.sudokusolverv2.SudokuBoard
        android:id="@+id/SudokuBoard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        custom:boardColor="#000000"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:cellFillColor="#6600DDFF"
        custom:cellsHighlightColor="#2600DDFF"
        custom:letterColor="@color/black"
        custom:letterColorSolve="#DD003366">
    </com.example.sudokusolverv2.SudokuBoard>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/SudokuBoard">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNOnePress"
            android:text="@string/One"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNTwoPress"
            android:text="@string/Two"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNThreePress"
            android:text="@string/Three"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/LinearLayout1">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFourPress"
            android:text="@string/Four"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFivePress"
            android:text="@string/Five"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSixPress"
            android:text="@string/Six"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSevenPress"
            android:text="@string/Seven"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNEightPress"
            android:text="@string/Eight"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNNinePress"
            android:text="@string/Nine"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/LinearLayout3">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/validate_btn"
            android:onClick="backButtonPress"
            android:text="@string/Back"
            android:textSize="18sp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/LinearLayout3" />

        <Button
            android:id="@+id/tipButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/validate_btn"
            android:onClick="tipButtonPress"
            android:text="@string/Tip"
            android:textSize="18sp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/LinearLayout3" />

        <Button
            android:id="@+id/solutionButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/validate_btn"
            android:onClick="solutionButtonPress"
            android:text="@string/Solution"
            android:textSize="18sp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/LinearLayout3" />

        <Button
            android:id="@+id/forwardButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/validate_btn"
            android:onClick="forwardButtonPress"
            android:text="@string/Forward"
            android:textSize="18sp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/LinearLayout3" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>